.kube/docs-app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docs-app
  labels:
    app: docs-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docs-app
  template:
    metadata:
      labels:
        app: docs-app
    spec:
      containers:
        - name: docs-app
          image: docs-app-placeholder
          ports:
            - containerPort: 3334
