.kube/docs-app/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: docs-app
spec:
  selector:
    app: docs-app
  ports:
    - protocol: TCP
      port: 3334
      targetPort: 3334
